# lovro_os

./: .gitignore  BuildMe.sh  CMakeLists.txt  CompileAndLink.sh  GenerateIso.sh  README.md  Run.sh  grub.cfg  kernel.cpp  linker.ld  loader.s
include/: GlobalDescTable.h  InterruptManager.h  Interrupts.h  Port.h  types.h
src/: GlobalDescTable.cpp  InterruptManager.cpp  Interrupts.cpp  Interrupts.s  Port.cpp  kernel.cpp  loader.s
